--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/*
+*
+!*/
 !.gitignore
 !.README.md
 !LICENSE
@@ -7,6 +8,6 @@
 !/Introdução*/Lista*/*.pdf
 !/Introdução*/EP*/*.pdf
 !/Matemática*/Lista*/*.pdf
-!/Matrizes*/Listas/*
-!/Matrizes*/Resumos/*
+!/Matrizes*/Listas/*.pdf
+!/Matrizes*/Resumos/*.pdf
 
