--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-"Introdução à Estatística/Resolução Estatística Básica.pdf"
-"Organização e Arquitetura de Computadores I/Computer_Organization_and_Architecture_10th_William_Stallings.pdf"
-"Teoria da Computação
-/Michael Sipser - Introducao a Teoria da Computacao-Cengage CTP (2005).pdf"
+"Resolução Estatística Básica.pdf"
+Computer_Organization_and_Architecture_10th_William_Stallings.pdf
+"Michael Sipser - Introducao a Teoria da Computacao-Cengage CTP (2005).pdf"
+*.o
